--- a/portfolio.html
+++ b/portfolio.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
     <head>
         <title>Eric's Website</title>
-         <style>
+                 <style>
             body {
                 background: rgb(236, 242, 249);
                 color: rgb(100, 100, 100);
@@ -78,33 +78,23 @@
     </head>
 
     <body>
-        <div id="all-contents">
-            <nav>
-                <header>Eric's Website</header>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
+   <div id="all-contents">
+        <nav>
+            <header>Eric's Website</header>
+            <ul>
+                <li><a href="index.html">Home</a>
+                </li>
+                <li><a href="portfolio.html">Portfolio</a>
+                </li>
+            </ul>
+        </nav>
+        <main>
+            <div class="content">
+                <h1>Portfolio</h1>
+                <ul id="portfolio">
                 </ul>
-            </nav>
-            
-            <main>
-                <div class="sidebar">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQANQCZMW5ikV4w5Us8r97D_jWro4M7xe5rW3AC5hw10Z3gJcsTdRwoZhcz:https://cdn.shopify.com/s/files/1/2248/0831/files/dog-with-hat-meme-16.png">
-                </div>
-                
-                <div class="content">
-                    <header>Eric Patrick</header>
-                    <p>Student at Belle Chasse High School</p>
-                    <section class="interests">
-                        <header>Interests</header>
-                        <ul>
-                            <li>Food</li>
-                            <li>Music</li>
-                            <li>Dogs</li>
-                        </ul>
-                    </section>
-                </div>
-            </main>
-        </div>
+            </div>
+        </main>
+    </div>
     </body>
 </html>
