--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             .sidebar img {
                 margin-left: 8px;
                 width: 250px;
-                margin-top: 30px;
+                margin-top: 10px;
                 border-style: solid;
                 border-color: rgb(90, 90, 90);
             }
@@ -89,7 +89,7 @@
             
             <main>
                 <div class="sidebar">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQANQCZMW5ikV4w5Us8r97D_jWro4M7xe5rW3AC5hw10Z3gJcsTdRwoZhcz:https://cdn.shopify.com/s/files/1/2248/0831/files/dog-with-hat-meme-16.png">
+                    <img src="https://cdn.shopify.com/s/files/1/2248/0831/files/dog-with-hat-meme-16.png?7386698850523481597">
                 </div>
                 
                 <div class="content">
@@ -101,6 +101,8 @@
                             <li>Food</li>
                             <li>Music</li>
                             <li>Dogs</li>
+                            <li>Friends</li>
+                            <li>Games</li>
                         </ul>
                     </section>
                 </div>
